# internship-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  discover_jobs.py  pyproject.toml  run_ui.py
app/ai/: llm.py
app/ai/prompts/: job_extract.md  job_score.md
app/db/: schema.sql
app/sync/: __init__.py  sheets.py
app/web/: __init__.py  server.py
app/web/templates/: answers.html  index.html  profile.html
config/: roles.json
poc/: answer_bank.py  poc_autofill.py  poc_discovery.py  setup_profile.py
poc/test_forms/: greenhouse_mock.html  lever_mock.html
